# datafusion-query-cache

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
examples/: demo.rs
src/: aggregate.rs  cache.rs  lib.rs  log.rs
