[package]
name = "datafusion-query-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
#datafusion = "42.0.0"
datafusion =  {git = "https://github.com/apache/datafusion.git"}
futures = "0.3.31"
# TODo this hsould be feature flagged
termcolor = "1.4.1"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }

[lints.clippy]
dbg_macro = "deny"
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
